kubernetes/balanceador/haproxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: haproxy-load-balancer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: haproxy-lb
  template:
    metadata:
      labels:
        app: haproxy-lb
    spec:
      containers:
        - name: haproxy
          image: haproxy:latest  # Imagen oficial de HAProxy
          ports:
            - containerPort: 80  # El puerto que HAProxy escuchará
          volumeMounts:
            - name: haproxy-config
              mountPath: /usr/local/etc/haproxy/haproxy.cfg  # Donde HAProxy busca su archivo de configuración
              subPath: haproxy.cfg
      volumes:
        - name: haproxy-config
          configMap:
            name: haproxy-config-map  # El ConfigMap con la configuración de HAProxy
