kubernetes/balanceador/haproxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: haproxy-load-balancer
spec:
  selector:
    app: haproxy-lb
  ports:
    - protocol: TCP
      port: 80  # El puerto que el Load Balancer usa para recibir tráfico
      targetPort: 80  # Este es el puerto donde HAProxy está escuchando
